# Toy_Car_Simulation

./: CMakeLists.txt  README.md  package.xml
SolidworksFile/Package/car_control/: readme.md
config/: joint_names_car_control.yaml  joint_names_toy_car_3.yaml
launch/: display.launch  gazebo.launch  template_launch.launch
meshes/: BL_wheel.STL  BR_coord.STL  FL_wheel.STL  FR_wheel.STL  base1.SLDPRT  base_link.STL  toy_car_3.SLDASM  wheel.SLDPRT
scripts/: publisher.py  subscriber.py
src/: teleop.py
urdf/: 662_ToyCar.urdf  car_control.csv  car_control.urdf  config_controllers.yaml  final.urdf  my_robot_integration.urdf.xacro  template_launch.launch  toy_car_3.csv  toy_car_3.urdf  toy_car_3_integration.urdf.xacro  ydlidar.urdf
