<package format="2">
  <name>car_control</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for car_control</p>
    <p>This package contains configuration data, 3D models and launch files
for car_control robot</p>
  </description>
  <author>Kavyashree Devadiga</author>
  <maintainer email="kavya@umd.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
